[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "graphlime-reimplementation"
version = "0.1.0"
description = "A clean PyTorch implementation of GraphLIME for explaining Graph Neural Networks."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

authors = [
    {name = "Your Name"}
]

dependencies = [
    "torch>=2.3.0",
    "torch-geometric>=2.6.0",
    "numpy>=1.26.0",
    "scipy>=1.13.0",
    "scikit-learn>=1.5.0",
    "networkx>=3.3",
    "matplotlib>=3.9.0",
    "PyYAML>=6.0.1",
    "tqdm>=4.66.0"
]